SpeakPython/SpeakPythonJSGFParser.py
# $ANTLR 3.4 SpeakPythonJSGF.g 2015-06-16 19:11:48

import sys
from antlr3 import *
from antlr3.compat import set, frozenset



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
ARROW=4
AT=5
AT_GLOBAL_OPTIONS=6
AT_OPTIONS=7
AT_RESULTS=8
AT_TESTS=9
B_ARROW=10
COMMA=11
COMMENT=12
DEFAULT=13
ELIPSE=14
EQ=15
HASH_NAME=16
KLEENE=17
LA_BR=18
LC_BR=19
LR_BR=20
LS_BR=21
NEWLINE=22
NUM=23
OR=24
PLUS=25
QSTN=26
QUOTE_STRING=27
RA_BR=28
RC_BR=29
REGEX=30
RR_BR=31
RS_BR=32
SEMI=33
STAR=34
TILDE=35
VAR_NAME=36
WHITE_SPACE=37
WORD=38

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ARROW", "AT", "AT_GLOBAL_OPTIONS", "AT_OPTIONS", "AT_RESULTS", "AT_TESTS", 
    "B_ARROW", "COMMA", "COMMENT", "DEFAULT", "ELIPSE", "EQ", "HASH_NAME", 
    "KLEENE", "LA_BR", "LC_BR", "LR_BR", "LS_BR", "NEWLINE", "NUM", "OR", 
    "PLUS", "QSTN", "QUOTE_STRING", "RA_BR", "RC_BR", "REGEX", "RR_BR", 
    "RS_BR", "SEMI", "STAR", "TILDE", "VAR_NAME", "WHITE_SPACE", "WORD"
]




class SpeakPythonJSGFParser(Parser):
    grammarFileName = "SpeakPythonJSGF.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(SpeakPythonJSGFParser, self).__init__(input, state, *args, **kwargs)

        self.dfa5 = self.DFA5(
            self, 5,
            eot = self.DFA5_eot,
            eof = self.DFA5_eof,
            min = self.DFA5_min,
            max = self.DFA5_max,
            accept = self.DFA5_accept,
            special = self.DFA5_special,
            transition = self.DFA5_transition
            )

        self.dfa8 = self.DFA8(
            self, 8,
            eot = self.DFA8_eot,
            eof = self.DFA8_eof,
            min = self.DFA8_min,
            max = self.DFA8_max,
            accept = self.DFA8_accept,
            special = self.DFA8_special,
            transition = self.DFA8_transition
            )

        self.dfa17 = self.DFA17(
            self, 17,
            eot = self.DFA17_eot,
            eof = self.DFA17_eof,
            min = self.DFA17_min,
            max = self.DFA17_max,
            accept = self.DFA17_accept,
            special = self.DFA17_special,
            transition = self.DFA17_transition
            )

        self.dfa22 = self.DFA22(
            self, 22,
            eot = self.DFA22_eot,
            eof = self.DFA22_eof,
            min = self.DFA22_min,
            max = self.DFA22_max,
            accept = self.DFA22_accept,
            special = self.DFA22_special,
            transition = self.DFA22_transition
            )

        self.dfa30 = self.DFA30(
            self, 30,
            eot = self.DFA30_eot,
            eof = self.DFA30_eof,
            min = self.DFA30_min,
            max = self.DFA30_max,
            accept = self.DFA30_accept,
            special = self.DFA30_special,
            transition = self.DFA30_transition
            )

        self.dfa34 = self.DFA34(
            self, 34,
            eot = self.DFA34_eot,
            eof = self.DFA34_eof,
            min = self.DFA34_min,
            max = self.DFA34_max,
            accept = self.DFA34_accept,
            special = self.DFA34_special,
            transition = self.DFA34_transition
            )

        self.dfa38 = self.DFA38(
            self, 38,
            eot = self.DFA38_eot,
            eof = self.DFA38_eof,
            min = self.DFA38_min,
            max = self.DFA38_max,
            accept = self.DFA38_accept,
            special = self.DFA38_special,
            transition = self.DFA38_transition
            )

        self.dfa41 = self.DFA41(
            self, 41,
            eot = self.DFA41_eot,
            eof = self.DFA41_eof,
            min = self.DFA41_min,
            max = self.DFA41_max,
            accept = self.DFA41_accept,
            special = self.DFA41_special,
            transition = self.DFA41_transition
            )

        self.dfa42 = self.DFA42(
            self, 42,
            eot = self.DFA42_eot,
            eof = self.DFA42_eof,
            min = self.DFA42_min,
            max = self.DFA42_max,
            accept = self.DFA42_accept,
            special = self.DFA42_special,
            transition = self.DFA42_transition
            )

        self.dfa53 = self.DFA53(
            self, 53,
            eot = self.DFA53_eot,
            eof = self.DFA53_eof,
            min = self.DFA53_min,
            max = self.DFA53_max,
            accept = self.DFA53_accept,
            special = self.DFA53_special,
            transition = self.DFA53_transition
            )

        self.dfa56 = self.DFA56(
            self, 56,
            eot = self.DFA56_eot,
            eof = self.DFA56_eof,
            min = self.DFA56_min,
            max = self.DFA56_max,
            accept = self.DFA56_accept,
            special = self.DFA56_special,
            transition = self.DFA56_transition
            )




        self.delegates = []





    optionVals = {};
    optionValsBackup = optionVals;

    rules = [];
    aliasRules = {};

    parseFailed = False;



    # $ANTLR start "prog"
    # SpeakPythonJSGF.g:37:1: prog : s ( NEWLINE | WHITE_SPACE )* EOF ;
    def prog(self, ):

        self.optionVals['wordRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['varRegex'] = '[a-zA-Z0-9_\\+\\.\\-]+';
        self.optionVals['wordDelim'] = '[ ,/]+';

        try:
            try:
                # SpeakPythonJSGF.g:44:2: ( s ( NEWLINE | WHITE_SPACE )* EOF )
                # SpeakPythonJSGF.g:44:4: s ( NEWLINE | WHITE_SPACE )* EOF
                pass 
                self._state.following.append(self.FOLLOW_s_in_prog36)
                self.s()

                self._state.following.pop()

                # SpeakPythonJSGF.g:44:6: ( NEWLINE | WHITE_SPACE )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == NEWLINE or LA1_0 == WHITE_SPACE) :
                        alt1 = 1


                    if alt1 == 1:
                        # SpeakPythonJSGF.g:
                        pass 
                        if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                            self.input.consume()
                            self._state.errorRecovery = False


                        else:
                            mse = MismatchedSetException(None, self.input)
                            raise mse




                    else:
                        break #loop1


                self.match(self.input, EOF, self.FOLLOW_EOF_in_prog47)

                #action start
                #action end





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "prog"



    # $ANTLR start "s"
    # SpeakPythonJSGF.g:47:1: s : ( ( WHITE_SPACE | NEWLINE )* mat s | ( WHITE_SPACE | NEWLINE )* alias s | ( WHITE_SPACE | NEWLINE )* globalOptions s |);
    def s(self, ):
        mat1 = None




        try:
            try:
                # SpeakPythonJSGF.g:51:2: ( ( WHITE_SPACE | NEWLINE )* mat s | ( WHITE_SPACE | NEWLINE )* alias s | ( WHITE_SPACE | NEWLINE )* globalOptions s |)
                alt5 = 4
                alt5 = self.dfa5.predict(self.input)
                if alt5 == 1:
                    # SpeakPythonJSGF.g:51:4: ( WHITE_SPACE | NEWLINE )* mat s
                    pass 
                    # SpeakPythonJSGF.g:51:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop2
                        alt2 = 2
                        LA2_0 = self.input.LA(1)

                        if (LA2_0 == NEWLINE or LA2_0 == WHITE_SPACE) :
                            alt2 = 1


                        if alt2 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop2


                    self._state.following.append(self.FOLLOW_mat_in_s74)
                    mat1 = self.mat()

                    self._state.following.pop()

                    #action start
                    self.rules.append(mat1); 
                    #action end


                    self._state.following.append(self.FOLLOW_s_in_s78)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 2:
                    # SpeakPythonJSGF.g:52:4: ( WHITE_SPACE | NEWLINE )* alias s
                    pass 
                    # SpeakPythonJSGF.g:52:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop3
                        alt3 = 2
                        LA3_0 = self.input.LA(1)

                        if (LA3_0 == NEWLINE or LA3_0 == WHITE_SPACE) :
                            alt3 = 1


                        if alt3 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop3


                    self._state.following.append(self.FOLLOW_alias_in_s93)
                    self.alias()

                    self._state.following.pop()

                    #action start
                    #action end


                    self._state.following.append(self.FOLLOW_s_in_s97)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 3:
                    # SpeakPythonJSGF.g:53:4: ( WHITE_SPACE | NEWLINE )* globalOptions s
                    pass 
                    # SpeakPythonJSGF.g:53:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop4
                        alt4 = 2
                        LA4_0 = self.input.LA(1)

                        if (LA4_0 == NEWLINE or LA4_0 == WHITE_SPACE) :
                            alt4 = 1


                        if alt4 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop4


                    self._state.following.append(self.FOLLOW_globalOptions_in_s112)
                    self.globalOptions()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_s_in_s114)
                    self.s()

                    self._state.following.pop()


                elif alt5 == 4:
                    # SpeakPythonJSGF.g:54:4: 
                    pass 
                    #action start
                    #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "s"



    # $ANTLR start "globalOptions"
    # SpeakPythonJSGF.g:57:1: globalOptions : AT_GLOBAL_OPTIONS myOptions AT ;
    def globalOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:58:2: ( AT_GLOBAL_OPTIONS myOptions AT )
                # SpeakPythonJSGF.g:58:4: AT_GLOBAL_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_GLOBAL_OPTIONS, self.FOLLOW_AT_GLOBAL_OPTIONS_in_globalOptions130)

                self._state.following.append(self.FOLLOW_myOptions_in_globalOptions132)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_globalOptions134)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "globalOptions"



    # $ANTLR start "localOptions"
    # SpeakPythonJSGF.g:61:1: localOptions : AT_OPTIONS myOptions AT ;
    def localOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:62:2: ( AT_OPTIONS myOptions AT )
                # SpeakPythonJSGF.g:62:4: AT_OPTIONS myOptions AT
                pass 
                self.match(self.input, AT_OPTIONS, self.FOLLOW_AT_OPTIONS_in_localOptions145)

                #action start
                self.optionValsBackup = self.optionVals; self.optionVals = self.optionValsBackup.copy(); 
                #action end


                self._state.following.append(self.FOLLOW_myOptions_in_localOptions149)
                self.myOptions()

                self._state.following.pop()

                self.match(self.input, AT, self.FOLLOW_AT_in_localOptions151)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "localOptions"



    # $ANTLR start "myOptions"
    # SpeakPythonJSGF.g:65:1: myOptions : ( ( WHITE_SPACE | NEWLINE )* myOption myOptions | ( WHITE_SPACE | NEWLINE )* );
    def myOptions(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:66:2: ( ( WHITE_SPACE | NEWLINE )* myOption myOptions | ( WHITE_SPACE | NEWLINE )* )
                alt8 = 2
                alt8 = self.dfa8.predict(self.input)
                if alt8 == 1:
                    # SpeakPythonJSGF.g:66:4: ( WHITE_SPACE | NEWLINE )* myOption myOptions
                    pass 
                    # SpeakPythonJSGF.g:66:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop6
                        alt6 = 2
                        LA6_0 = self.input.LA(1)

                        if (LA6_0 == NEWLINE or LA6_0 == WHITE_SPACE) :
                            alt6 = 1


                        if alt6 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop6


                    self._state.following.append(self.FOLLOW_myOption_in_myOptions171)
                    self.myOption()

                    self._state.following.pop()

                    self._state.following.append(self.FOLLOW_myOptions_in_myOptions173)
                    self.myOptions()

                    self._state.following.pop()


                elif alt8 == 2:
                    # SpeakPythonJSGF.g:67:4: ( WHITE_SPACE | NEWLINE )*
                    pass 
                    # SpeakPythonJSGF.g:67:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop7
                        alt7 = 2
                        LA7_0 = self.input.LA(1)

                        if (LA7_0 == NEWLINE or LA7_0 == WHITE_SPACE) :
                            alt7 = 1


                        if alt7 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop7


                    #action start
                    #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "myOptions"



    # $ANTLR start "myOption"
    # SpeakPythonJSGF.g:70:1: myOption : ( WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )? | WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )? );
    def myOption(self, ):
        WORD2 = None
        REGEX3 = None
        WORD4 = None

        try:
            try:
                # SpeakPythonJSGF.g:71:2: ( WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )? | WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )? )
                alt17 = 2
                alt17 = self.dfa17.predict(self.input)
                if alt17 == 1:
                    # SpeakPythonJSGF.g:71:4: WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* REGEX ( SEMI )?
                    pass 
                    WORD2 = self.match(self.input, WORD, self.FOLLOW_WORD_in_myOption198)

                    # SpeakPythonJSGF.g:71:9: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop9
                        alt9 = 2
                        LA9_0 = self.input.LA(1)

                        if (LA9_0 == NEWLINE or LA9_0 == WHITE_SPACE) :
                            alt9 = 1


                        if alt9 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop9


                    self.match(self.input, EQ, self.FOLLOW_EQ_in_myOption209)

                    # SpeakPythonJSGF.g:71:37: ( RA_BR )?
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == RA_BR) :
                        alt10 = 1
                    if alt10 == 1:
                        # SpeakPythonJSGF.g:71:38: RA_BR
                        pass 
                        self.match(self.input, RA_BR, self.FOLLOW_RA_BR_in_myOption212)




                    # SpeakPythonJSGF.g:71:46: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop11
                        alt11 = 2
                        LA11_0 = self.input.LA(1)

                        if (LA11_0 == NEWLINE or LA11_0 == WHITE_SPACE) :
                            alt11 = 1


                        if alt11 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop11


                    REGEX3 = self.match(self.input, REGEX, self.FOLLOW_REGEX_in_myOption225)

                    # SpeakPythonJSGF.g:71:77: ( SEMI )?
                    alt12 = 2
                    LA12_0 = self.input.LA(1)

                    if (LA12_0 == SEMI) :
                        alt12 = 1
                    if alt12 == 1:
                        # SpeakPythonJSGF.g:71:78: SEMI
                        pass 
                        self.match(self.input, SEMI, self.FOLLOW_SEMI_in_myOption228)




                    #action start
                    self.optionVals[WORD2.text] = REGEX3.text[1:-2]; 
                    #action end



                elif alt17 == 2:
                    # SpeakPythonJSGF.g:72:4: WORD ( WHITE_SPACE | NEWLINE )* EQ ( RA_BR )? ( WHITE_SPACE | NEWLINE )* DEFAULT ( SEMI )?
                    pass 
                    WORD4 = self.match(self.input, WORD, self.FOLLOW_WORD_in_myOption237)

                    # SpeakPythonJSGF.g:72:9: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop13
                        alt13 = 2
                        LA13_0 = self.input.LA(1)

                        if (LA13_0 == NEWLINE or LA13_0 == WHITE_SPACE) :
                            alt13 = 1


                        if alt13 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop13


                    self.match(self.input, EQ, self.FOLLOW_EQ_in_myOption248)

                    # SpeakPythonJSGF.g:72:37: ( RA_BR )?
                    alt14 = 2
                    LA14_0 = self.input.LA(1)

                    if (LA14_0 == RA_BR) :
                        alt14 = 1
                    if alt14 == 1:
                        # SpeakPythonJSGF.g:72:38: RA_BR
                        pass 
                        self.match(self.input, RA_BR, self.FOLLOW_RA_BR_in_myOption251)




                    # SpeakPythonJSGF.g:72:46: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop15
                        alt15 = 2
                        LA15_0 = self.input.LA(1)

                        if (LA15_0 == NEWLINE or LA15_0 == WHITE_SPACE) :
                            alt15 = 1


                        if alt15 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop15


                    self.match(self.input, DEFAULT, self.FOLLOW_DEFAULT_in_myOption264)

                    # SpeakPythonJSGF.g:72:79: ( SEMI )?
                    alt16 = 2
                    LA16_0 = self.input.LA(1)

                    if (LA16_0 == SEMI) :
                        alt16 = 1
                    if alt16 == 1:
                        # SpeakPythonJSGF.g:72:80: SEMI
                        pass 
                        self.match(self.input, SEMI, self.FOLLOW_SEMI_in_myOption267)




                    #action start
                    self.optionVals[WORD4.text] = self.defaultOptionVals[WORD4.text]; 
                    #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return 

    # $ANTLR end "myOption"



    # $ANTLR start "mat"
    # SpeakPythonJSGF.g:76:1: mat returns [matR] : ( localOptions ( WHITE_SPACE | NEWLINE )* )? exps statementFields ;
    def mat(self, ):
        matR = None


        exps5 = None




        try:
            try:
                # SpeakPythonJSGF.g:80:2: ( ( localOptions ( WHITE_SPACE | NEWLINE )* )? exps statementFields )
                # SpeakPythonJSGF.g:80:4: ( localOptions ( WHITE_SPACE | NEWLINE )* )? exps statementFields
                pass 
                # SpeakPythonJSGF.g:80:4: ( localOptions ( WHITE_SPACE | NEWLINE )* )?
                alt19 = 2
                LA19_0 = self.input.LA(1)

                if (LA19_0 == AT_OPTIONS) :
                    alt19 = 1
                if alt19 == 1:
                    # SpeakPythonJSGF.g:80:5: localOptions ( WHITE_SPACE | NEWLINE )*
                    pass 
                    self._state.following.append(self.FOLLOW_localOptions_in_mat294)
                    self.localOptions()

                    self._state.following.pop()

                    # SpeakPythonJSGF.g:80:18: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop18
                        alt18 = 2
                        LA18_0 = self.input.LA(1)

                        if (LA18_0 == NEWLINE or LA18_0 == WHITE_SPACE) :
                            alt18 = 1


                        if alt18 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop18





                self._state.following.append(self.FOLLOW_exps_in_mat307)
                exps5 = self.exps()

                self._state.following.pop()

                #action start
                self.optionVals = self.optionValsBackup; 
                #action end


                self._state.following.append(self.FOLLOW_statementFields_in_mat316)
                self.statementFields()

                self._state.following.pop()

                #action start
                matR =  exps5 
                #action end





            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return matR

    # $ANTLR end "mat"



    # $ANTLR start "statementFields"
    # SpeakPythonJSGF.g:86:1: statementFields : ( ( WHITE_SPACE | NEWLINE )* AT_RESULTS mResults AT statementFields | ( WHITE_SPACE | NEWLINE )* AT_TESTS testCases AT statementFields |);
    def statementFields(self, ):
        try:
            try:
                # SpeakPythonJSGF.g:87:2: ( ( WHITE_SPACE | NEWLINE )* AT_RESULTS mResults AT statementFields | ( WHITE_SPACE | NEWLINE )* AT_TESTS testCases AT statementFields |)
                alt22 = 3
                alt22 = self.dfa22.predict(self.input)
                if alt22 == 1:
                    # SpeakPythonJSGF.g:87:4: ( WHITE_SPACE | NEWLINE )* AT_RESULTS mResults AT statementFields
                    pass 
                    # SpeakPythonJSGF.g:87:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop20
                        alt20 = 2
                        LA20_0 = self.input.LA(1)

                        if (LA20_0 == NEWLINE or LA20_0 == WHITE_SPACE) :
                            alt20 = 1


                        if alt20 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False


                            else:
                                mse = MismatchedSetException(None, self.input)
                                raise mse




                        else:
                            break #loop20


                    self.match(self.input, AT_RESULTS, self.FOLLOW_AT_RESULTS_in_statementFields341)

                    self._state.following.append(self.FOLLOW_mResults_in_statementFields343)
                    self.mResults()

                    self._state.following.pop()

                    self.match(self.input, AT, self.FOLLOW_AT_in_statementFields345)

                    self._state.following.append(self.FOLLOW_statementFields_in_statementFields347)
                    self.statementFields()

                    self._state.following.pop()

                    #action start
                    #action end



                elif alt22 == 2:
                    # SpeakPythonJSGF.g:89:4: ( WHITE_SPACE | NEWLINE )* AT_TESTS testCases AT statementFields
                    pass 
                    # SpeakPythonJSGF.g:89:4: ( WHITE_SPACE | NEWLINE )*
                    while True: #loop21
                        alt21 = 2
                        LA21_0 = self.input.LA(1)

                        if (LA21_0 == NEWLINE or LA21_0 == WHITE_SPACE) :
                            alt21 = 1


                        if alt21 == 1:
                            # SpeakPythonJSGF.g:
                            pass 
                            if self.input.LA(1) == NEWLINE or self.input.LA(1) == WHITE_SPACE:
                                self.input.consume()
                                self._state.errorRecovery = False

